Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16899

gnilnd build fails converting struct lnet_nid * to string in CDEBUG() message.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      Minor fallout from
      https://review.whamcloud.com/c/fs/lustre-release/+/44633
      landed 4a88236f40a47c05d0cc6a253dcfc105427987f4 but missed a nid to string conversion in a related CDEBUG().

            stancheff Shaun Tancheff
            stancheff Shaun Tancheff
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: