LU-16899 gnilnd: Use libcfs_nidstr and fix typo

CDEBUG() in kgnilnd_peer_notify() should use libcfs_nidstr()

kgnilnd_finish_connect() has a typo in lnet_notify() where
peer_nid was intended.

Test-Parameters: trivial
Fixes: 4a88236f40 ("LU-10391 lnet: change lnet_notify() to take struct lnet_nid")
Signed-off-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Change-Id: If45a28b654e27aa34b655fefaea142dc740fa46f
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/51330
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Chris Horn <chris.horn@hpe.com>
Reviewed-by: Neil Brown <neilb@suse.de>
Reviewed-by: Oleg Drokin <green@whamcloud.com>